# oza

./: Cargo.toml  README.md
cli/: Cargo.toml
cli/src/: main.rs
database/: Cargo.toml
server/: Cargo.toml
shared/: Cargo.toml
statistics/: Cargo.toml
