[package]
name = "oza_database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = "0.99.17"
env_logger = "0.9.0"
rocksdb = { version="0.18.0", features = ["multi-threaded-cf"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.82"