[package]
name = "shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-identity = "0.4.0"
actix-web = { version = "4.0.0", features = ["openssl","rustls"] }
actix-web-httpauth = "0.6.0"
env_logger = "0.9.0"
rustls = "0.20.6"
rustls-pemfile = "1.0.0"